err/donkeysimple.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DonkeySimple'...
Listing './lib/python3.5/site-packages/DonkeySimple/CmdInterface'...
Compiling './lib/python3.5/site-packages/DonkeySimple/CmdInterface/__init__.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/CmdInterface/__init__.py", line 12
    print '%s%s:' % (' '*indent, title)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DonkeySimple/DS'...
Compiling './lib/python3.5/site-packages/DonkeySimple/DS/_common.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/_common.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/_controllers.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/_controllers.py", line 101
    chmod_own(self.path, 0666)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/_git.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/_git.py", line 126
    print args[0]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/_site_generator.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/_site_generator.py", line 39
    os.chmod(self._base_dir, 0777)
                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/_template_renderer.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/_template_renderer.py", line 12
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/download.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/download.py", line 17
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/ds_creator.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/ds_creator.py", line 18
    print '\n\nSite template copied'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/random_string.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/random_string.py", line 17
    print 'A secure pseudo-random number generator is not available on your system. Falling back to Mersenne Twister.'
                                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/DS/send_emails.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/DS/send_emails.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DonkeySimple/WebInterface'...
Compiling './lib/python3.5/site-packages/DonkeySimple/WebInterface/__init__.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/WebInterface/__init__.py", line 39
    print stdout
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/WebInterface/_auth.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/WebInterface/_auth.py", line 83
    print 'A secure pseudo-random number generator is not available on your system. Falling back to Mersenne Twister.'
                                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/WebInterface/_forms.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/WebInterface/_forms.py", line 15
    print '%s:' % name,
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DonkeySimple/WebInterface/_views.py'...
***   File "./lib/python3.5/site-packages/DonkeySimple/WebInterface/_views.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DonkeySimple/WebInterface/static'...
Listing './lib/python3.5/site-packages/DonkeySimple/WebInterface/static/libs'...
Listing './lib/python3.5/site-packages/DonkeySimple/WebInterface/static/libs/ace'...
Listing './lib/python3.5/site-packages/DonkeySimple/WebInterface/templates'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/builtin'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/builtin/pages'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/builtin/templates'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/default'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/default/pages'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/default/static'...
Listing './lib/python3.5/site-packages/DonkeySimple/site-template/repos/default/templates'...
Listing './lib/python3.5/site-packages/DonkeySimple-0.20.3.egg-info'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown2-2.3.5.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
